# logic-fabricator

./: .dockerignore  .env.dev  .env.dev.example  .env.example  .env.test  .env.test.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  contradiction_engine.md  contradiction_handling.md  contributor_guide.md  emergent_concepts.md  engine_features.md  fabricator_overview.md  fork_simulation_flow.md  forking_and_contradictions.md  llm_integration_plan.md  llm_parser.md  logic_fabricator_brief.md  mcp_design.md  mcp_design_notes.md  mcp_implementation.md  mcp_philosophy.md  memory_control_plane.md  rule_matching_engine.md  simulation_engine.md  simulation_engine_plan.md  workbench_tutorial.md
src/logic_fabricator/: config.py  db_adapter.py  exceptions.py  fabric.py  ir_translator.py  llm_parser.py  mcp.py  neo4j_adapter.py  workbench.py
src/logic_fabricator/core_types/: __init__.py  belief_system.py  condition.py  contradiction.py  effect.py  evaluators.py  forking_strategy.py  operators.py  rule.py  simulation.py  statement.py
src/logic_fabricator/ir/: ir_schema.json  ir_types.py
src/logic_fabricator/prompts/: ir_parser_system_prompt.md
tests/: mocks.py  test_belief_system.py  test_fabric.py  test_ir_translator.py  test_llm_parser.py  test_mcp.py  test_persistence.py  test_workbench.py
