[project]
name = "logic-fabricator"
version = "0.1.0"
description = "The only project where contradictions are a feature, not a bug."
authors = [{ name = "Vijay Anant", email = "vijay.hassan@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"


[project.urls]
"Homepage" = "https://github.com/vijayanant/logic-fabricator"
"Repository" = "https://github.com/vijayanant/logic-fabricator"

[project.scripts]
logic-fabricator = "logic_fabricator.workbench:main"

[tool.poetry]
packages = [{ include = "logic_fabricator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.3"
openai = ">=1.0.0,<2.0.0"
python-dotenv = "^1.0.0"
structlog = "^24.3.0"
neo4j = "^5.22.0"

[tool.pytest.ini_options]
markers = [
  "llm: marks tests as requiring LLM calls (slow)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
